# automirror

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Justfile  README.md  config.schema.json  config.yaml  go.mod  go.sum  main.go  main.py  pyproject.toml
examples/: git.inpt.fr.yaml  mine.yaml
k8s-example/: configmap.yaml  cronjob.yaml  namespace.yaml  secrets.yaml
