[tool.poetry]
name = "automirror"
version = "0.1.0"
description = "Automatically create a mirror repository on a github organization and add a push mirror to the corresponding gitlab repository"
authors = ["Ewen Le Bihan <hey@ewen.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyGithub = "^2.3.0"
typed-dotenv = {extras = ["pydantic"], version = "^1.0.1"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
