[tool.poetry]
name = "automirror"
version = "0.1.0"
description = "Automatically create a mirror repository on a github organization and add a push mirror to the corresponding gitlab repository"
authors = ["Ewen Le Bihan <hey@ewen.works>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
typed-dotenv = {version = "^2.0.2", extras = ["pydantic", "yaml"]}
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
